--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                 <img src="./assets/Logo M3 [branco] (4) 1.png" alt="logo da M3"
                 />
             </a>
-        </header>        
+        </header>
+        <img class="img-desktop" src="./assets/Rectangle 9.png" alt="macbook com codigos na tela"
+        />
+        <img class="img-mobile" src="./assets/Rectangle 9 mobile.png" alt="macbook com codigos na tela"
+        />        
     </body>
 </html>
