feat: info-section

--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="./style.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Landing page</title>
-        <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <header>
             <a href="/">
-                <img src="./assets/Logo M3 [branco] (4) 1.png" alt="logo da M3"
+                <img src="./assets/Imagens/Logo M3 [branco] (4) 1.png" alt="logo da M3"
                 />
             </a>
         </header>
-        <img class="img-desktop" src="./assets/Rectangle 9.png" alt="macbook com codigos na tela"
+        <img class="img-desktop" src="./assets/Imagens/Rectangle 9.png" alt="macbook com codigos na tela"
         />
-        <img class="img-mobile" src="./assets/Rectangle 9 mobile.png" alt="macbook com codigos na tela"
-        />        
+        <img class="img-mobile" src="./assets/Imagens/Rectangle 9 mobile.png" alt="macbook com codigos na tela"
+        />
+        <div class="info-section">
+            <div class="info-section-text">
+                <h2>
+                    LOREM IPSUM
+                </h2>
+                <h1>
+                    DOLOR SIT AMET
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Cras euismod enim non dui fringilla interdum. 
+                    Curabitur ut tortor sed lacus egestas vulputate vel sit amet velit. Nulla suscipit magna dui. 
+                </p>
+            </div>
+            <img src="./assets/svg/fxemoji_threenetworkedcomputers.svg" alt="tres computadores"
+            />
+        </div>        
     </body>
 </html>
