--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         />
         <img class="img-mobile" src="./assets/Imagens/Rectangle 9 mobile.png" alt="macbook com codigos na tela"
         />
-        <div class="info-section">
+        <section class="info-section">
             <div class="info-section-text">
                 <h2>
                     LOREM IPSUM
@@ -38,6 +38,29 @@
             </div>
             <img src="./assets/svg/fxemoji_threenetworkedcomputers.svg" alt="tres computadores"
             />
-        </div>        
+        </section>
+        <section class="top-cards">
+            <div class="top-cards-box">
+                <img src="./assets/svg/shop 1.svg" alt="desenho loja"
+                />
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
+            </div>
+            <div class="top-cards-box">
+                <img src="./assets/svg/shopping-bag (1) 1.svg" alt="desenho sacola de compra"
+                />
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum.
+                </p>
+            </div>
+            <div class="top-cards-box">
+                <img src="./assets/svg/coin 1.svg" alt="desenho mao com moeda"
+                />
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
+            </div>
+        </section>
     </body>
 </html>
