feat middle-banner

--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
                 </p>
             </div>
         </section>
+        <img class="img-desktop" src="./assets/Imagens/Rectangle 13.png" alt="macbook sendo fechado"
+        />
+        <img class="img-mobile" src="./assets/Imagens/Rectangle 13 mobile.png" alt="macbook sendo fechado"
+        />
     </body>
 </html>
